mengubah teks button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <p id="info">Belum ada perubahan.</p>
 
-    <button onclick="ubahTeks()">Ubah Teks</button>
+    <button onclick="ubahTeks()">klik</button>
 
     <script>
         function ubahTeks() {
